@@ -130,6 +130,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 18389) Localise numbers in EXIF data
 * (bug 18522) Wrap MediaWiki:Protect-cascadeon in a div for identification
 * (bug 18438) Tweak HTML for preview bar for consistency and accessibility
+* (bug 18432) Updated documentation for dumpBackup.php
 
 == API changes in 1.16 ==
 
